--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -1,15 +1,18 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.a {
+  background-color: powderblue;
+  transition: background-color 0.5s;
 }
 
+a:hover {
+  background-color: rgb(184, 91, 4);
+  border-radius: 5px;
+}
+
+body{ 
+  background-image: url(./assets/IcoWhiskey.jpeg);
+  background-repeat: no-repeat;
+  background-size:cover;
+  
+}
